--- a/src/components/Container/style.css
+++ b/src/components/Container/style.css
@@ -1,12 +1,18 @@
 .container {
     width: 100%;
     height: 100vh;
+    position: absolute;
+    top: 0;
+    display: flex;
 }
 
-.right_container {
-    position: absolute;
-    width: 400px;
+.block_left {
+    width: 70%;
     height: 100vh;
-    right: 0;
+}
+
+.block_right {
+    width: 30%;
+    height: 100vh;
     background-color: gray;
 }
