--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -2,6 +2,9 @@
     width: 100%;
     height: 100px;
     display: flex;
+    position: fixed;
+    background-color: white;
+    z-index: 1;
 }
 
 .logo_block {
