--- a/src/index.css
+++ b/src/index.css
@@ -3,4 +3,5 @@
   margin: 0;
   box-sizing: border-box;
   user-select: none;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
