--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -29,39 +29,18 @@ ul {
     margin-top: 25px;
     font-size: 25px;
 }
-.navbar {
+.name_block {
     display: flex;
     justify-content: center;
-    width: 600px;
+    width: 1000px;
     height: 100px;
     margin-left: 100px;
     align-items: center;
 }
 
-.nav-list {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    display: flex;
-}
-
-.nav-item {
-    margin: 0 15px;
-}
-
-.nav-item a {
-    text-decoration: none;
-    color: black;
-    font-size:25px;
-    padding: 10px 15px;
-    display: block;
-    transition: background-color 0.3s ease, color 0.3s ease;
-}
-
-.nav-item a:hover {
-    background-color: #575757;
-    color: #fff;
-    border-radius: 4px;
+.name_block span {
+    font-size: 50px;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
 .logo {
